Fix: switch to ES modules for better-auth compatibility

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@types/pg": "^8.16.0",
     "better-auth": "^1.4.18",
